--- a/config/production.yml
+++ b/config/production.yml
@@ -1,5 +1,5 @@
 server:
-  origin: https://nestjs-task-frontend.s3-us-west-1.amazonaws.com/index.html
+  origin: https://api-nestjs-udemy.herokuapp.com/
 
 db:
   synchronize: false
